anneal/tests/fixtures/multiple_errors/expected.stderr

=== Anneal Verification Failed ===

[Anneal Error] anneal::doc_block

  × Documentation block error: Unclosed Anneal block in documentation.
   ╭─[[PROJECT_ROOT]/src/b.rs:1:1]
 1 │ /// ```lean, anneal
   · ─────────┬─────────
   ·          ╰── problematic block
 2 │ /// context:
   ╰────


[Anneal Error] anneal::syn_error

  × Syntax error in Rust source: cannot parse string into token stream
   ╭─[[PROJECT_ROOT]/src/a.rs:1:12]
 1 │ fn broken( {
   ·            ▲
   ·            ╰── here
 2 │ 
   ╰────

Error: Aborting due to 2 previous errors.
